terraform/modules/ecs-cluster/securitygroups.tf
resource "aws_security_group" "cluster" {
  name        = var.CLUSTER_NAME
  vpc_id      = var.VPC_ID
  description = var.CLUSTER_NAME
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
